// Copyright 2023 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package main;

option go_package = "./;main";

message RequestHeader {
  bool is_loadtest = 1;
  string trace_id = 2;
}

message ResponseHeader {
  bool is_success = 1;
  int32 error_code = 2;
  string error_msg = 3;
  string trace_info = 4;
}

message HelloRequest {
  RequestHeader header = 1;
  string name = 2;
};

message HelloResponse {
  ResponseHeader header = 1;
  string content = 2;
};